--- a/CSS/プロパティ概要.md
+++ b/CSS/プロパティ概要.md
@@ -1,5 +1,3 @@
-# CSS / SASS
-
 ## プロパティ概要
 
 - ### box-shadow
@@ -47,7 +45,7 @@
   ```scss
   //画像を横352px,縦240pxで固定
     img{
-      aspect-ratio: 352/240px;
+      aspect-ratio: 352/240;
     }
   ```
 
@@ -68,97 +66,23 @@
 
 ## 疑似要素
 
-CSS / SASSで要素を追加することができる
-
-### 構文
+CSSで要素を追加することができる
+**構文**
 
 ```scss
 .class {
   padding: 80px;
 
   // before:親要素の前に疑似要素を追加
-  &::before {
+.class::before {
     content: "手前"; // コンテンツ指定必須、空も可
     background: blue;
   }
 
   // after:親要素の後に疑似要素を追加
-  &::after {
+  .class::after {
     content: "後ろ";
     background: green;
-  }
-}
-```
-
-<br>
-
-### 疑似要素で親要素に動的アンダーラインを作る例
-
-```scss
-.nav-link {
-  padding: 10px 20px;
-  text-decoration: none;
-  color: cn.$color-main;
-  display: inline-block;
-  position: relative;
-  font-size: 16px;
-  font-weight: bold;
-
-//親要素の後に疑似要素を追加
-  &::after {
-    content: ""; //空要素
-    display: block;
-    width: 100%;
-    height: 2px;
-    background: cn.$color-main;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    box-shadow: 5px 5px 10px 5px rgba(100, 100, 100, 0.25);
-    transform: scaleX(0);
-    transform-origin: 0% 50%;
-    transition: transform ease-in-out 0.15s;
-  }
-// ホバーしたら
-  &:hover {
-    &::after {
-      transform: scaleX(1); // 等倍にして描画
-    }
-  }
-}
-```
-
-<br>
-
-## 操作不可オートスライドカルーセル実装
-
-```scss
-.hero-images {
-  width: 100%;
-  position: absolute;
-  z-index: 2;
-  bottom: -1vw;
-  left: 0;
-}
-.hero-images-list {
-  white-space: nowrap;
-  animation: infiniteCarousel 60s linear infinite;
-}
-@keyframes infiniteCarousel {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-50%);
-  }
-}
-.hero-images-item {
-  height: 100%;
-  display: inline-block;
-  margin: 0 5px;
-  > img {
-    width: auto;
-    height: 286px;
   }
 }
 ```
