１アプリケーション開発概論.md を更新

--- a/#SiiD/１アプリケーション開発概論.md
+++ b/#SiiD/１アプリケーション開発概論.md
@@ -1,6 +1,35 @@
-## プログラミングとは？
+# プログラミング
+
+## プログラミングとは
+
    コンピュータと対話するための手段
 
-    コンピュータは``機械語``(0,1の羅列)しか理解できない
+   コンピュータは``機械語``(0,1の羅列)しか理解できない
+
+   プログラミング言語は最終的にこの``機械語``に変換されてコンピュータに伝わる
     
-    
+## 2進数(2進法)
+
+   上記の``機械語``はこの``2進数``が使われており、全ての文字、数字、データ、命令を表現している
+
+   ※英語で``binary``ともいい、よく使われる表現なので覚えておくと◎
+
+   コンピュータの世界には他にも8進数、10進数、16進数といった方式もある
+
+   (10進数は人間が日常的に使う数字)
+
+### 文字コード
+
+   上記の2進数で文字を表現するための規格を``文字コード``といい
+
+   簡単に言えば「文字」と「文字に割り当てた番号」の対応規格で代表的なもので
+
+   ASCII(American Standard Code for Information Interchange)
+
+   があり、他にも以下のようなものがある
+
+   |   規格   |                    用途                    |
+   |---------|-------------------------------------------|
+   | ASCII   | 英語圏で使われる文字を中心に数字や記号などを含めた企画 |
+   | Unicode | 世界中の文字を表現するために生まれた規格            |
+   | UTF-8   |         |
