１アプリケーション開発概論.md を更新

--- a/#SiiD/１アプリケーション開発概論.md
+++ b/#SiiD/１アプリケーション開発概論.md
@@ -30,6 +30,7 @@
 
    |   規格   |                    用途                    |
    |---------|-------------------------------------------|
-   | ASCII   | 英語圏で使われる文字を中心に数字や記号などを含めた企画 |
+   | ASCII   | 英語圏で使われる文字を中心に数字や記号などを含めた規格 |
    | Unicode | 世界中の文字を表現するために生まれた規格            |
-   | UTF-8   |         |
+   | UTF-8   | 現在世界的に主流の規格                         |
+
