--- a/#SiiD/１アプリケーション開発概論.md
+++ b/#SiiD/１アプリケーション開発概論.md
@@ -22,7 +22,7 @@
 
    上記の2進数で文字を表現するための規格を``文字コード``といい
 
-   簡単に言えば「文字」と「文字に割り当てた番号」の対応規格で代表的なもので
+   簡単に言えば「文字」と「文字に割り当てた番号」の対応規格で代表的なものに
 
    ASCII(American Standard Code for Information Interchange)
 
@@ -33,4 +33,22 @@
    | ASCII   | 英語圏で使われる文字を中心に数字や記号などを含めた規格 |
    | Unicode | 世界中の文字を表現するために生まれた規格            |
    | UTF-8   | 現在世界的に主流の規格                         |
+
+### 音声や画像、動画について
+
+   テキストデータ以外のすべてのデータは``バイナリデータ``と呼ばれ、文字コードがなくても0と1で表現できる
+
+   一般的なエディタで開くと文字化けするが、バイナリエディタという特殊なエディタで開せば文字化けしない
+
+## プログラミング言語
+
+### 低水準言語の誕生
+
+   コンピュータに文字を伝える手段として``アセンブリ言語``が生まれた
+
+   アセンブリ言語は低水準言語と呼ばれ``機械語をほぼそのまま英語、記号に変えた言語’‘
+
+   仕組みとしてはまず人間が理解しやすい形でプログラムを書き、それを機械語に変換してコンピュータに伝える
+
+   これが``プログラミング言語の基本的な仕組み``になった
 
