１アプリケーション開発概論.md を更新

--- a/#SiiD/１アプリケーション開発概論.md
+++ b/#SiiD/１アプリケーション開発概論.md
@@ -46,7 +46,7 @@
 
    コンピュータに文字を伝える手段として``アセンブリ言語``が生まれた
 
-   アセンブリ言語は低水準言語と呼ばれ``機械語をほぼそのまま英語、記号に変えた言語’‘
+   アセンブリ言語は低水準言語と呼ばれ``機械語をほぼそのまま英語、記号に変えた言語``
 
    仕組みとしてはまず人間が理解しやすい形でプログラムを書き、それを機械語に変換してコンピュータに伝える
 
