--- a/#SiiD/１アプリケーション開発概論/１プログラミングとは.md
+++ b/#SiiD/１アプリケーション開発概論/１プログラミングとは.md
@@ -6,7 +6,7 @@
 
    コンピュータは``機械語``(0,1の羅列)しか理解できない
 
-   プログラミング言語は最終的にこの``機械語``に変換されてコンピュータに伝わる
+   プログラミング言語は最終的にこの``機械語``に変換されてコンピュータに伝わる``(コンパイル)``
     
 ## 2進数(2進法)
 
@@ -51,4 +51,16 @@
    仕組みとしてはまず人間が理解しやすい形でプログラムを書き、それを機械語に変換してコンピュータに伝える
 
    これが``プログラミング言語の基本的な仕組み``になった
+
+### 高水準言語の誕生
+
+   高水準言語とは、
+   機械語よりは理解しやすいが依然として複雑な低水準言語を、人間の自然言語に近い形式でプログラミングを可能とした言語
+
+   |   低水準言語                    |       高水準言語    |
+   |---------|-------------------------------------------|
+   | ``1940年代～``　アセンブリ言語   | ``1950年代～``FORTRAN、COBOL |
+   |                                | ``1970年代～``C言語、BASIC |
+   |                                | ``1990年代～``PHP、JAVA、Python、Ruby |
+
 
