１プログラミングとは.md を更新

--- a/#SiiD/１アプリケーション開発概論/１プログラミングとは.md
+++ b/#SiiD/１アプリケーション開発概論/１プログラミングとは.md
@@ -6,7 +6,7 @@
 
    コンピュータは``機械語``(0,1の羅列)しか理解できない
 
-   プログラミング言語は最終的にこの``機械語``に変換されてコンピュータに伝わる``(コンパイル)``
+   プログラミング言語は最終的にこの``機械語``に変換されてコンピュータに伝わる
     
 ## 2進数(2進法)
 
@@ -51,6 +51,8 @@
    仕組みとしてはまず人間が理解しやすい形でプログラムを書き、それを機械語に変換してコンピュータに伝える
 
    これが``プログラミング言語の基本的な仕組み``になった
+
+   この変換することを``(コンパイル)``という
 
 ### 高水準言語の誕生
 
