１プログラミングとは.md を更新

--- a/#SiiD/１アプリケーション開発概論/１プログラミングとは.md
+++ b/#SiiD/１アプリケーション開発概論/１プログラミングとは.md
@@ -65,6 +65,22 @@
    |                                | ``1970年代～``C言語、BASIC |
    |                                | ``1990年代～``PHP、JAVA、Python、Ruby |
 
-###コンパイラ言語とインタプリタ言語
+###プログラミング言語が持つ特性
 
-   プログラミング言語には上記のような**コンパイル**
+- コンパイラ言語とインタプリタ言語
+
+   プログラミング言語には上記のような**コンパイル**をして実行する**コンパイラ言語**
+
+   実行時に内部的に自動で機械語に変換する**インタプリタ言語**
+
+   があり、現代では両方の言語が必要な場面に応じて選択される
+
+   それぞれの特徴は以下を参照
+
+   | 項目   | コンパイラ言語 | インタプリタ言語 |
+   |--------|--------------|--------------|
+   | **概要**   | 一度コンパイルしてから実行ファイルを元に実行する | コンパイルなしで、即座に機械語に変換・コンピュータに伝える |
+   | **メリット** | 実行速度が速い | コンパイルが不要で手間いらず |
+   | **デメリット** | コンパイルが必要で手間がかかる | 実行速度が遅い |
+   | **代表例** | C 言語、Go、Java | JavaScript、Python、Ruby |
+
