--- a/#SiiD/１アプリケーション開発概論/１プログラミングとは.md
+++ b/#SiiD/１アプリケーション開発概論/１プログラミングとは.md
@@ -4,15 +4,15 @@
 
    コンピュータと対話するための手段
 
-   コンピュータは``機械語``(0,1の羅列)しか理解できない
+   コンピュータは0と1のみで表現される**機械語(バイナリコード)**しか理解できない
 
-   プログラミング言語は最終的にこの``機械語``に変換されてコンピュータに伝わる
+   プログラミング言語は最終的にこの**機械語**に変換されてコンピュータに伝わる
     
 ## 2進数(2進法)
 
-   上記の``機械語``はこの``2進数``が使われており、全ての文字、数字、データ、命令を表現している
+   上記の**機械語**には**2進数(0と1)**が使われており、全ての文字、数字、データ、命令を表現している
 
-   ※英語で``binary``ともいい、よく使われる表現なので覚えておくと◎
+   ※英語でbinaryともいい、よく使われる表現なので覚えておくと◎
 
    コンピュータの世界には他にも8進数、10進数、16進数といった方式もある
 
@@ -20,7 +20,7 @@
 
 ### 文字コード
 
-   上記の2進数で文字を表現するための規格を``文字コード``といい
+   上記の2進数で文字を表現するための規格を**文字コード**といい
 
    簡単に言えば「文字」と「文字に割り当てた番号」の対応規格で代表的なものに
 
@@ -36,7 +36,7 @@
 
 ### 音声や画像、動画について
 
-   テキストデータ以外のすべてのデータは``バイナリデータ``と呼ばれ、文字コードがなくても0と1で表現できる
+   テキストデータ以外のすべてのデータは**バイナリデータ**と呼ばれ、文字コードがなくても0と1で表現できる
 
    一般的なエディタで開くと文字化けするが、バイナリエディタという特殊なエディタで開せば文字化けしない
 
@@ -44,15 +44,15 @@
 
 ### 低水準言語の誕生
 
-   コンピュータに文字を伝える手段として``アセンブリ言語``が生まれた
+   コンピュータに文字を伝える手段として**アセンブリ言語**が生まれた
 
-   アセンブリ言語は低水準言語と呼ばれ``機械語をほぼそのまま英語、記号に変えた言語``
+   アセンブリ言語は低水準言語と呼ばれ**機械語をほぼそのまま英語、記号に変えた言語**
 
    仕組みとしてはまず人間が理解しやすい形でプログラムを書き、それを機械語に変換してコンピュータに伝える
 
-   これが``プログラミング言語の基本的な仕組み``になった
+   これが**プログラミング言語の基本的な仕組み**になった
 
-   この変換することを``(コンパイル)``という
+   この*変換*することを**(コンパイル)*という
 
 ### 高水準言語の誕生
 
