--- a/Laravel/環境構築.md
+++ b/Laravel/環境構築.md
@@ -1,7 +1,71 @@
-# Laravel Sailを用いたLaravel＋Dockerの環境構築　苦戦ログ
+# WindowsOSでのLaravelSailを用いた環境構築～苦戦ログ～
+
+## リソース
 
 [Laravel公式ドキュメントーLaravel Sail](https://laravel.com/docs/11.x/installation#sail-on-windows)
+
+[Docker](https://www.docker.com/ja-jp/)
 
 [Docker公式ドキュメント-Windows 上の Docker Desktop WSL 2 バックエンド](https://docs.docker.com/desktop/features/wsl/)
 
 [Zenn-[Windows] 新しくPC買ったのでWSL2を導入してみる](https://zenn.dev/ap_com/articles/install-wsl2-on-windows)
+
+## 苦戦ログ
+
+- ## curlコマンドのエラー
+  動画教材にならって
+  ```
+  curl -s https://laravel.build/example-app | bash
+  ```
+  をVScodeのターミナル(bash)で実行したが、エラーが出てしまう
+
+- ## DockerとWSL2のインストール・設定
+
+  `
+  WSL2（Windows Subsystem for Linux）とはWindows上でLinuxのコマンドラインツールやGUIアプリケーションを直接実行できるようにする機能
+  `
+  <br>
+  <br>
+  LaravelSailの公式ドキュメントを翻訳して読むと、事前に`Docker Desktop` `WSL2`のインストール・設定が必須でとの記載あり
+  <br>
+  <br>
+  https://www.docker.com/ja-jp/ よりWindows版のAMD64をダウンロードし、インストール
+  <br>
+  <br>
+  https://zenn.dev/ap_com/articles/install-wsl2-on-windows<br>
+  上記Zennの記事を参考にして、PowerShellでWSL2をインストール
+  <br>
+  <br>
+  https://docs.docker.com/desktop/features/wsl/ <br>
+  Docker公式ドキュメントを参考に、`Docker Desktop` `WSL2` を設定
+
+- ## curlコマンド再実行→失敗→Ubuntuでの実行
+  VScodeのターミナル(bash)で再度
+   ```
+  curl -s https://laravel.build/example-app | bash
+  ```
+  を実行したが、またエラー…
+
+  関連する記事がなく、どん詰まりになったので、GPT先生に相談したところ
+
+  以下のようなフィードバックを頂いた↓
+
+  - Dockerデスクトップの設定
+
+    DockerDesktopの設定＞Resources＞WSL Integration
+
+    ``Ubuntu``にチェック
+  <br><br>
+  - PCを再起動
+
+    Ubuntuでのcurlコマンド実行を促されたが、Ubuntuがうまく起動せず
+
+    PCを再起動してみてとのこと
+  <br><br>
+  - Ubuntuで実行→成功
+
+    VScodeのターミナルでUbuntuを選択し、再度curlコマンドを実行
+    ```
+    curl -s https://laravel.build/example-app | bash
+    ```
+    バッチリ依存関係がダウンロードされました！！
