環境構築.md を更新

--- a/Laravel/環境構築.md
+++ b/Laravel/環境構築.md
@@ -13,7 +13,7 @@
 ## 苦戦ログ
 
 - ## curlコマンドのエラー
-  動画教材にならって
+  Laravel Sailのドキュメントにならって
   ```
   curl -s https://laravel.build/example-app | bash
   ```
