--- a/Words/言語の分類.md
+++ b/Words/言語の分類.md
@@ -1,5 +1,4 @@
-# プログラミング言語の様々な分類
-## 高級言語と低級言語の違い
+# 高級言語／低級言語
 
 「**高級言語（こうきゅうげんご）**」と「**低級言語（ていきゅうげんご）**」は、それぞれ「**高水準言語**」と「**低水準言語**」と同じ意味です。  
 
@@ -21,58 +20,7 @@
 
 ---
 
-## バイナリコードとバイナリデータの違い
-
-| | **バイナリコード** | **バイナリデータ** |
-|---|---|---|
-| **目的** | CPUが実行する命令 | 画像・音声・テキストなどのデータ |
-| **解釈方法** | 機械語として解釈され、CPUが動作 | 文字やメディアデータとして解釈 |
-| **例** | `10110000 01100001`（CPU命令） | `01001000 01100101 ...`（文字や画像データ） |
-| **ファイルの種類** | `.exe`, `.bin`, `.elf`（実行ファイル） | `.jpg`, `.mp3`, `.zip`（データファイル） |
-
----
-
-## CPUとは？
-
-### 1. CPUの役割
-
-1. **命令の読み取り（フェッチ: Fetch）**  
-2. **命令の解読（デコード: Decode）**  
-3. **命令の実行（エグゼキュート: Execute）**  
-
-### 2. CPUの主な構成要素
-
-- **演算装置（ALU: Arithmetic Logic Unit）** → 計算処理を担当  
-- **制御装置（CU: Control Unit）** → 命令の流れを制御  
-- **レジスタ（Register）** → 超高速な記憶装置  
-- **キャッシュメモリ** → 高速アクセス用のメモリ  
-
-### 3. CPUの性能指標
-
-| **指標** | **説明** |
-|---|---|
-| **クロック周波数（GHz）** | 1秒間に何回処理できるか |
-| **コア数（Cores）** | 同時に処理できるスレッドの数 |
-| **スレッド数（Threads）** | 1つのコアが扱える並列処理の数 |
-| **キャッシュサイズ** | よく使うデータを保存するメモリ |
-
-### 4. 代表的なCPUメーカー
-- **Intel**（Core i3, i5, i7, i9）  
-- **AMD**（Ryzen 3, 5, 7, 9, Threadripper）  
-- **Apple**（M1, M2, M3）  
-
----
-
-## まとめ
-
-✅ **コンパイル** = 機械語に変換  
-✅ **トランスパイル** = 別の高級言語に変換  
-✅ **高級言語と低級言語** = 抽象度とハードウェア依存度の違い  
-✅ **バイナリコード** = CPUの命令、**バイナリデータ** = 画像・音声などのデータ  
-✅ **CPU** = コンピュータの頭脳  
-
-
-# 関数型言語と手続き型言語の違い
+# 関数型言語／手続き型言語
 
 ## 1. 手続き型言語（Procedural Programming）
 手続き型言語は、プログラムを **手続き（プロシージャ）や関数の集まり** として記述し、**命令の順序** に従って実行するスタイルの言語です。
@@ -157,7 +105,7 @@ main = putStrLn greet
 
 ---
 
-# 静的型付け言語と動的型付け言語の違い
+# 静的型付け言語／動的型付け言語
 
 ## 1. 静的型付け言語とは？
 **コンパイル時に型が決まる**言語のこと。変数の型を明示的に宣言するか、コンパイラが型を推論します。
