関連用語.md を更新

--- a/security/関連用語.md
+++ b/security/関連用語.md
@@ -246,3 +246,105 @@ if (password_verify('mypassword', $hashed)) {
 どちらも情報セキュリティの基本中の基本です！
 この2つは混同されやすいですが、
 **「あとで戻す必要があるかどうか」** を判断基準にすると理解しやすいです。
+
+# 💬 プリペアドステートメント（バインディング）とは？
+
+## 🔍 ざっくり説明
+
+**プリペアドステートメント**とは：
+
+> **データベースにクエリ（命令）を安全に送る方法**  
+> ユーザーが入力した値を、**変数として後からセットする**ことで、  
+> セキュリティ（特にSQLインジェクション）を高める仕組み！
+
+---
+
+## 🍜 ラーメン屋さんの例で説明
+
+ラーメン屋さんの注文用紙にこう書かれてるとします：
+
+```
+注文：◯◯ラーメン　トッピング：◯◯
+```
+
+店員さんは紙の「◯◯」のところに、「しょうゆ」「チャーシュー」などをあとから書き入れる。  
+この「◯◯」のところが**バインディングされる変数**です。
+
+---
+
+## 💥 なぜ必要なの？
+
+ユーザーが入力する内容をそのままSQL文に入れてしまうと…
+
+```sql
+SELECT * FROM users WHERE name = '$name';
+```
+
+例えば、`$name` に悪意ある値が入っていたら：
+
+```sql
+' OR '1'='1
+```
+
+結果こうなる：
+
+```sql
+SELECT * FROM users WHERE name = '' OR '1'='1';
+```
+
+これだと**全てのユーザー情報が取得されてしまう！**  
+こういった攻撃を「**SQLインジェクション**」と言います。
+
+---
+
+## 🛡 プリペアドステートメントで安全に！
+
+プリペアドステートメントを使えば、  
+ユーザーの入力は「ただの値」として扱われるので、命令としては動きません。
+
+### ✅ 例（PHP＋PDO）
+
+```php
+$stmt = $pdo->prepare("SELECT * FROM users WHERE name = :name");
+$stmt->bindParam(':name', $name);
+$stmt->execute();
+```
+
+- `:name` が変数の部分（これが**プレースホルダー**）
+- `bindParam()` でそこに実際の値を入れる（これが**バインディング**）
+
+---
+
+## 🍰 Laravelでの例（クエリビルダ）
+
+Laravelでは、バインディングは自動でやってくれることが多い！
+
+```php
+DB::select("SELECT * FROM users WHERE name = ?", [$name]);
+```
+
+または、もっと簡単に：
+
+```php
+User::where('name', $name)->get();
+```
+
+Laravelが裏でプリペアドステートメントを使ってくれるので安全！
+
+---
+
+## ✅ まとめ
+
+| 項目 | 内容 |
+|------|------|
+| プリペアドステートメント | SQL文をあらかじめ作っておき、あとから変数をセットする方法 |
+| バインディング | 変数の値をSQL文に安全に埋め込むこと |
+| メリット | SQLインジェクションを防げる、安全で正確な検索ができる |
+| Laravel | クエリビルダやEloquentが自動で安全なバインディングをしてくれる |
+
+---
+
+## 💡 高校生向け覚え方
+
+> 🔒「変数はあとで安全に入れる」ことで、  
+> 💣「爆弾（攻撃）」を中に仕込まれないようにする！
